--- a/sixman/src/main/webapp/resources/css/mail/mailList.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailList.css
@@ -98,35 +98,40 @@ input[type=checkbox]{
 
 .category-footer{
     width: 100%;
-    height: 80px;
+    height: 60px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-}
-
-.category-footer > div:nth-of-type(1){
-    width: 100%;
-    display: flex;
-    padding: 0 10px;
-    justify-content: space-around;
-}
-
-.category-footer > div:nth-of-type(1) > input{
-    width: 80%;
-    outline: none;
-    border-radius: 5px;
-    border: 1px solid var(--bo-20);
+    padding: 20px;
 }
 
 .category-footer .btn{
     font-weight: 300;
     font-size: 0.8em;
+    width: 50%;
+    height: 30px;
 }
 
-.category-footer .btn:nth-of-type(2){
+.category-footer .c-btn{
+    font-weight: 300;
+    font-size: 0.8em;
     width: 50%;
+    height: 30px;
+    border: 1px solid var(--main-color);
+}
+
+.category-footer .c-btn *{
+    color: var(--main-color);
+}
+
+.category-footer .c-btn:hover p{
+    color: white;
+    background-color: var(--main-color);
+}
+
+.category-footer .c-btn:hover{
+    background-color: var(--main-color);
 }
 
 .checked{
@@ -170,4 +175,62 @@ input[type=checkbox]{
 .category-item.cate-checked{
     background-color: var(--main-color);
     color: white;
+}
+
+#category-modal-box{
+    z-index: 150;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bo-20);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* display: none; */
+}
+
+#modal-main-box{
+    width: 500px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+#modal-main-box > div:nth-of-type(1){
+    font-size: 1.5em;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--bo-80);
+}
+
+#modal-main-box > div:nth-of-type(1) span{
+    cursor: pointer;
+}
+
+#modal-main-box > div:nth-of-type(2){
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+#modal-main-box > div:nth-of-type(2) input{
+    padding: 0 10px;
+    height: 25px;
+    font-size: 1.1em;
+    font-weight: 100;
+    border: none;
+    outline: none;
+    width: 70%;
+    border-bottom: 1px solid var(--main-color);
+}
+
+#modal-main-box > div:nth-of-type(2) .btn{
+    width: 30%;
+    border: none;
+    outline: none;
 }
