서블릿 멤버조인 시 파일 없어도 로그인 될수있도록 수정 트랜잭션 처리하도록 한메소드로 옮김 비밀번호 업데이트 switch부분 전부 완료
화면
멤버 조인 시 필수 입력 항목 작성 및 에러메시지 정규식패턴 적용.

--- a/sixman/src/main/webapp/resources/css/admin/member/join.css
+++ b/sixman/src/main/webapp/resources/css/admin/member/join.css
@@ -79,11 +79,19 @@
     height: 200px;
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
 }
 
 .write {
     font-size: 17px;
+    position: relative;
+}
+
+.write p {
+    position: absolute;
+    color: #e85c5c;
+    font-size: 12px;
+    bottom: -15px;
+    left: 90px;
 }
 
 .write input {
@@ -145,7 +153,7 @@
 
 #bank > input {
     margin-left: 90px;
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 #profile-view > img {
@@ -190,6 +198,7 @@
 
 .right-info {
     width: 50%;
+    margin-top: 3px;
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -370,4 +379,12 @@ select {
 .dept-guide p {
     font-size: 14px;
     font-weight: 600;
+}
+
+.write .error {
+    border: 1px solid #e85c5c;
+}
+
+.error:focus {
+    outline-color: #e85c5c;
 }
