--- a/sixman/src/main/webapp/resources/css/member/switch.css
+++ b/sixman/src/main/webapp/resources/css/member/switch.css
@@ -34,22 +34,8 @@
     font-size: 22px;
 }
 
-.body {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.body input {
-    font-size: 17px;
-    padding: 10px;
-    border: none;
-    border-bottom: 1px solid var(--bo-20);
-    outline-style: none;
-    margin-bottom: 2px;
-}
-.body input:first-child {
-    margin-bottom: 10px;
+.body div:first-child {
+    margin: 20px 0;
 }
 .body input:focus {
     border-bottom: 1px solid var(--main-color);
@@ -74,4 +60,34 @@ input[type='submit'] {
 
 input[type='submit']:hover {
     background-color: #17a897;
+}
+.success {
+    width: 100%;
+    font-size: 17px;
+    padding: 10px;
+    border: none;
+    outline-style: none;
+    border-bottom: 1px solid var(--bo-20);
+}
+.success.error {
+    border-bottom: 1px solid #e85c5c;
+}
+
+.success.error:focus {
+    border-bottom: 1px solid #e85c5c;
+}
+
+.newpwd,
+.newpwdCheck {
+    position: relative;
+    width: 100%;
+}
+
+#p1-comment,
+#p2-comment {
+    position: absolute;
+    bottom: -17px;
+    left: 0;
+    font-size: 11px;
+    color: #e85c5c;
 }
