--- a/sixman/src/main/webapp/resources/css/document2.css
+++ b/sixman/src/main/webapp/resources/css/document2.css
@@ -60,7 +60,7 @@
 .list-item{
     display: grid;
     position: relative;
-    grid-template-columns:  1.5fr 1fr 10fr 1fr 1fr 1fr; 
+    grid-template-columns:  1.5fr 2fr 8fr 1fr 1fr; 
     border-bottom: 1px solid rgb(54, 54, 54);
     align-items: center;
     height: 10%;
@@ -76,13 +76,18 @@
 .list-item p:nth-of-type(3){
     text-align: center;
 }
+.list-item p:nth-of-type(2){
+    padding-left: 50px;
+}
 
 .first{
     color: black;
     background-color: rgb(214, 214, 214);
     height: 50px;
     font-size: 1.2em;
-    padding-left: 10px;
+    padding-right: 20px;
+    gap: 10px;
+    
 }
 .docu-write{
     display: flex;
