등원전 멤버리스트 페이징처리 커밋

--- a/sixman/src/main/webapp/resources/css/admin/organizationChart/list.css
+++ b/sixman/src/main/webapp/resources/css/admin/organizationChart/list.css
@@ -190,7 +190,8 @@ p[name='imgName'] {
 
 .newbie-list .newbie-box {
     width: 140.469px;
-    float: left;
+    display: flex;
+    justify-content: center;
     list-style: none;
 }
 
