--- a/sixman/src/main/webapp/resources/css/admin/organizationChart/list.css
+++ b/sixman/src/main/webapp/resources/css/admin/organizationChart/list.css
@@ -4,9 +4,7 @@
     height: 100%;
     gap: 40px;
 }
-p[name='imgPath'] {
-    display: none;
-}
+
 #dept-wrap {
     width: 14%;
     height: 100%;
@@ -122,7 +120,6 @@ p[name='imgPath'] {
     color: var(--main-color);
     font-weight: 500;
 }
-
 #search-controller label {
     color: var(--bo-60);
     border-right: 1px solid var(--bo-20);
@@ -139,74 +136,15 @@ p[name='imgPath'] {
     padding: 20px;
 }
 
-#newbie {
+#set-position {
+    position: relative;
     width: 100%;
-    height: 15%;
+    height: 10%;
     padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    position: relative;
-}
-
-#prev,
-#next {
-    cursor: pointer;
-    color: var(--bo-40);
-}
-
-#prev:hover,
-#next:hover {
-    color: #000;
-}
-
-#prev {
-    position: absolute;
-    top: 50%;
-    left: 0;
-}
-#next {
-    position: absolute;
-    top: 50%;
-    right: 0px;
-}
-
-.newbie-wrapper {
-    width: 140.469px;
-    height: 100%;
-    overflow: hidden;
-}
-
-.newbie-list {
-    position: relative;
-    width: 140.469px;
-    height: 100%;
-    margin: 0 auto;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-}
-
-.newbie-list .newbie-box {
-    width: 140.469px;
-    float: left;
-    list-style: none;
-}
-
-.newbie-list.animated {
-    transition: 0.5s ease-in-out;
-}
-.newbie-list .newbie-box:not(:last-child) {
-    margin-right: 30px;
-}
-
-.newbie-box a {
-    cursor: pointer;
-    text-decoration: none;
-    color: #2d2d2d;
-    font-weight: 700;
-    display: flex;
 }
 
 #employee-name {
@@ -234,20 +172,17 @@ p[name='imgPath'] {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 85%;
+    height: 90%;
     padding: 10px;
 }
 
 #companyLogo {
-    margin-left: 10px;
-    padding-top: 20px;
-    width: 150px;
-    height: 30px;
+    margin: 0px 0px 10px 10px;
+    width: 100px;
 }
 
 #companyLogo > img {
-    width: 130px;
-    height: 30px;
+    max-width: 100%;
     object-fit: fill;
 }
 
@@ -261,13 +196,12 @@ p[name='imgPath'] {
     margin: 10px 30px;
 }
 .title span {
-    font-size: 23px;
     color: var(--main-color);
     margin-right: 7px;
 }
-.title h1 {
-    font-size: 17px;
-    font-weight: 600;
+.title label {
+    font-size: 18px;
+    font-weight: 500;
     margin-bottom: 2px;
 }
 
@@ -360,15 +294,13 @@ p[name='imgPath'] {
     display: grid;
     grid-template-columns: 0.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 2fr;
     border-bottom: 1px solid var(--bo-20);
+    cursor: pointer;
     align-items: flex-end;
     padding-bottom: 10px;
     justify-items: center;
     font-size: 15px;
 }
-.list-item a {
-    text-decoration: none;
-    color: #000;
-}
+
 .list-item select {
     border: 1px solid var(--bo-40);
     border-radius: 3px;
@@ -390,14 +322,14 @@ p[name='imgPath'] {
     font-size: 18px;
     font-weight: 600;
     border-bottom: 1px solid var(--main-color);
-    padding-bottom: 4px;
+    padding-bottom: 2px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .side-title p {
-    font-size: 15px;
+    font-size: 14px;
     color: var(--main-color);
 }
 
@@ -436,15 +368,12 @@ p[name='imgPath'] {
     width: 90%;
 }
 
-.newbie-pic,
 .select-employee-pic {
     width: 30px;
     height: 30px;
     border-radius: 50px;
-    border: 1px solid var(--bo-20);
 }
 
-.newbie-pic img,
 .select-employee-pic > img {
     width: 100%;
     height: 100%;
@@ -536,16 +465,9 @@ p[name='imgPath'] {
 .page-box span:hover {
     color: black;
 }
-.side-body {
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
+
 .select {
     width: 50%;
-    height: 35%;
     position: relative;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
@@ -611,17 +533,4 @@ p[name='imgPath'] {
 .select .option-list .option:hover {
     background-color: #2e7aff;
     color: #fff;
-}
-
-.modal-wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 999999;
-    background-color: var(--bo-60);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
