--- a/sixman/src/main/webapp/resources/css/mail/mailDetail.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailDetail.css
@@ -157,7 +157,7 @@ input[id=list-check]{
     gap: 10px;
 }
 
-#send-member > input{
+#send-member input{
     border: none;
     width: 100%;
     border-bottom: 1px solid var(--bo-40);
@@ -173,125 +173,4 @@ input[id=list-check]{
 
 #board-footer{
     justify-content: end;
-}
-
-/*  */
-
-.category-btn{
-    position: relative;
-    cursor: pointer;
-}
-
-#category-box,#category-box2{
-    position: absolute;
-    top: 35px;
-    flex-direction: column;
-    background-color: white;
-    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
-    padding: 5px 0;
-}
-#category-box{width: 250px; max-height: 300px;}
-#category-box2{width: 120px; max-height: 300px;}
-
-.category-items{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.category-items > label,
-.category-items > button{
-    background: none;
-    border: none;
-    display: flex;
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    align-items: center;
-    font-weight: 500;
-    color: var(--bo-80);
-    justify-content: space-between;
-    cursor: pointer;
-}
-
-.category-items > label:hover,
-.category-items > button:hover{
-    background-color: rgb(245, 245, 245);
-    color: var(--main-color);
-}
-
-.category-items > label:has(input:checked){
-    background-color: rgb(245, 245, 245);
-    color: var(--main-color);
-}
-
-.category-items input{
-    display: none;
-}
-
-.category-footer{
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
-}
-
-.category-footer .btn{
-    font-weight: 300;
-    font-size: 0.8em;
-    width: 50%;
-    height: 30px;
-}
-
-.category-footer .c-btn{
-    font-weight: 300;
-    font-size: 0.8em;
-    width: 50%;
-    height: 30px;
-    border: 1px solid var(--main-color);
-}
-
-.category-footer .c-btn *{
-    color: var(--main-color);
-}
-
-.category-footer .c-btn:hover p{
-    color: white;
-    background-color: var(--main-color);
-}
-
-.category-footer .c-btn:hover{
-    background-color: var(--main-color);
-}
-
-.checked{
-    box-shadow: 0 1px 0px 0px var(--main-color);
-}
-
-#members{
-    display: flex;
-    gap: 10px;
-}
-
-.members-item{
-    display: flex;
-    border: 1px solid var(--main-color);
-    border-radius: 10px;
-    height: 20px;
-    padding: 3px;
-    align-items: center;
-    justify-content: center;
-}
-
-.members-item > input{
-    text-align: center;
-    height: 15px;
-    width: fit-content;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    color: var(--main-color);
 }
