공지사항쪽 디테일 확인 완료 메일 부분 디테일 확인 중

--- a/sixman/src/main/webapp/resources/css/notice/noticeDetail.css
+++ b/sixman/src/main/webapp/resources/css/notice/noticeDetail.css
@@ -138,10 +138,15 @@ input[id=list-check]{
 }
 
 #before-next > div > p:nth-of-type(2){
+    cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     width: 300px;
+}
+
+#before-next > div > p:nth-of-type(2):hover{
+    color: var(--main-color);
 }
 
 #before-next > div > p:nth-of-type(3){
