--- a/sixman/src/main/webapp/resources/css/mail/mailDetail.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailDetail.css
@@ -295,3 +295,62 @@ input[id=list-check]{
     font-size: 12px;
     color: var(--main-color);
 }
+
+
+#category-modal-box{
+    z-index: 150;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bo-20);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* display: none; */
+}
+
+#modal-main-box{
+    width: 500px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+#modal-main-box > div:nth-of-type(1){
+    font-size: 1.5em;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--bo-80);
+}
+
+#modal-main-box > div:nth-of-type(1) span{
+    cursor: pointer;
+}
+
+#modal-main-box > div:nth-of-type(2){
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+#modal-main-box > div:nth-of-type(2) input{
+    padding: 0 10px;
+    height: 25px;
+    font-size: 1.1em;
+    font-weight: 100;
+    border: none;
+    outline: none;
+    width: 70%;
+    border-bottom: 1px solid var(--main-color);
+}
+
+#modal-main-box > div:nth-of-type(2) .btn{
+    width: 30%;
+    border: none;
+    outline: none;
+}
