메일 전송 연동완료

--- a/sixman/src/main/webapp/resources/css/mail/mailList.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailList.css
@@ -40,9 +40,12 @@ input[type=checkbox]{
     color: var(--main-color);
 }
 
+.list-item span.read,
 .read{
     color: var(--bo-40);
 }
+
+
 
 .category-btn{
     position: relative;
