--- a/sixman/src/main/webapp/resources/css/project/allprj.css
+++ b/sixman/src/main/webapp/resources/css/project/allprj.css
@@ -1,3 +1,7 @@
+.main-box {
+    display: block !important;
+    
+}
 
 .myprj {
     padding: 35px;
@@ -47,13 +51,15 @@
 .favorite {
     width: 30px;
     height: 30px;
-    border: 1px solid #aaa;
-    border-radius: 0 15px 0 0;
+    margin-top: 10px;
     margin-left: 2px;
+    cursor: pointer;
+    font-size: 30px;
 }
 
 .like {
-   color: yellow;
+   color: #12887A;;
+   --text-shadow: 1px 1px 1px yellow;
 }
 
 .hidden {
