--- a/sixman/src/main/webapp/resources/css/project/create.css
+++ b/sixman/src/main/webapp/resources/css/project/create.css
@@ -37,7 +37,7 @@
     margin-right: 20px;
 }
 
-input[name='prj_name']{
+input[name='title']{
     width: 400px;    
     height: 40px;
     border: 1px solid #d3d3d3;
@@ -80,8 +80,8 @@ input[name='prj_name']{
 
 /* 일정 */
 
-input[name='prjDate1'],
-input[name='prjDate2'] {
+#startDate,
+#endDate {
     --margin-top: 11px;
     width: 150px;
     height: 40px;
@@ -92,6 +92,14 @@ input[name='prjDate2'] {
 
 .line > p {
     margin: 10px;
+}
+
+.prj2 {
+    margin-left: 170px;
+}
+
+.writer1 {
+    width: 150px;
 }
 
 
@@ -206,6 +214,16 @@ input[name='prjDate2'] {
 .member {
     display: flex;
     color: #2e7aff;
+}
+
+input[name='prjmem'] {
+    outline: none;
+    border: none;
+    color: #2e7aff;
+    text-align: center;
+    width: 60px;
+    height: 25px;
+    font-size: 15px;
 }
 
 /* 프로젝트 내용 */
