--- a/sixman/src/main/webapp/resources/css/organizationChart/list.css
+++ b/sixman/src/main/webapp/resources/css/organizationChart/list.css
@@ -8,6 +8,7 @@
 #dept-wrap {
     width: 14%;
     height: 100%;
+    padding: 10px;
 }
 
 #employee-wrap {
@@ -90,6 +91,10 @@
     color: var(--main-color);
     font-weight: 500;
 }
+
+.hide {
+    display: none;
+}
 #search-controller label {
     color: var(--bo-60);
     border-right: 1px solid var(--bo-20);
@@ -134,14 +139,15 @@
 }
 
 #employee-pic {
-    width: 65%;
-    height: 50%;
+    width: 150px;
+    height: 192px;
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
 }
 
 #employee-pic img {
     width: 100%;
     height: 100%;
-    border-radius: 5px;
 }
 
 #detail-controller {
@@ -170,6 +176,7 @@
     width: 100%;
     height: 50%;
     padding: 10px;
+    gap: 10px;
 }
 
 #companyLogo {
@@ -276,6 +283,8 @@
 }
 
 #dept-detail-title {
+    width: 100%;
+    height: 7%;
     color: var(--main-color);
     font-size: 18px;
     font-weight: 600;
@@ -285,7 +294,13 @@
     align-items: flex-end;
     justify-content: space-between;
 }
-
+.dept-list-wrap {
+    width: 100%;
+    height: 88%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 #dept-detail-title h3 {
     font-size: 14px;
     color: var(--bo-60);
@@ -294,11 +309,11 @@
 .dept-detail-list {
     display: flex;
     width: 100%;
-    height: 12%;
+    height: 10%;
     border-bottom: 1px solid var(--bo-20);
-    padding: 5px 5px 3px 5px;
+    padding: 5px 5px 10px 5px;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .dept-employee-detail {
@@ -320,12 +335,14 @@
     width: 30px;
     height: 30px;
     border-radius: 50px;
+    border: 1px solid var(--bo-20);
     overflow: hidden;
 }
 
 .dept-employee-pic > img {
     width: 100%;
     height: 100%;
+    border-radius: 50px;
     object-fit: fill;
 }
 
@@ -350,9 +367,9 @@
 
 #list-controller {
     width: 100%;
+    height: 5%;
     display: flex;
     justify-content: flex-end;
-    margin-top: 5px;
 }
 
 #list-controller span {
@@ -394,4 +411,124 @@
 }
 .page-box span:hover {
     color: black;
+}
+
+/* 부서목록 */
+
+.dept-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 1px solid var(--main-color-dark);
+    padding: 3px 0;
+    margin-bottom: 10px;
+}
+
+.dept-title span {
+    color: var(--main-color);
+    margin-right: 5px;
+}
+
+.dept-title p {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.teamList-item,
+.deptList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    transition: 0.2s ease-in-out;
+}
+
+.teamList-item label > input,
+.deptList-item label > input {
+    display: none;
+}
+
+.teamList-item .toggleBtn,
+.deptList-item .toggleBtn {
+    padding: 3px 4px;
+    display: flex;
+    background-color: var(--main-color);
+    align-items: center;
+    color: #fff;
+    margin-right: 5px;
+    transition: 0.2s ease-in-out;
+}
+
+.teamList-item .toggleBtn > span,
+.deptList-item .toggleBtn > span {
+    font-size: 15px;
+    transition: 0.4s ease-in-out;
+}
+
+.teamList-item > label,
+.deptList-item > label {
+    width: 100%;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.teamList-item {
+    margin-left: 23px;
+}
+
+.teamList-item ~ li > .memberList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    margin-left: 46px;
+}
+
+.deptList-item ~ li > .memberList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    margin-left: 23px;
+}
+
+.memberList-item > a {
+    font-size: 12px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+}
+.memberList-item > a > span {
+    margin-right: 4px;
+    color: var(--main-color);
+}
+
+.teamList-item:has(input:checked),
+.deptList-item:has(input:checked) {
+    border: 1px solid var(--main-color-dark);
+    background-color: var(--main-color-dark);
+    color: #fff;
+}
+
+.teamList-item:has(input:checked) .toggleBtn,
+.deptList-item:has(input:checked) .toggleBtn {
+    background-color: var(--main-color-dark);
+}
+.teamList-item:has(input:checked) .toggleBtn span,
+.deptList-item:has(input:checked) .toggleBtn span {
+    transform: rotate(180deg);
+}
+
+.teamList-item ~ li,
+.deptList-item ~ li {
+    max-height: 0px;
+    overflow: hidden;
+}
+
+.teamList-item:has(input:checked) ~ li,
+.deptList-item:has(input:checked) ~ li {
+    max-height: none;
 }
