--- a/sixman/src/main/webapp/resources/css/admin/company/edit.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/edit.css
@@ -8,7 +8,6 @@
 
 .edit-wrap {
     width: 70%;
-    height: 100%;
     display: flex;
     padding: 20px;
 }
@@ -56,9 +55,15 @@ input[name='edit'] {
     justify-content: center;
     align-items: center;
 }
-
-.edit-dept,
 .edit-position {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.edit-dept {
     width: 100%;
     height: 100%;
     display: flex;
@@ -253,6 +258,7 @@ label[for='companyLogoFile']:hover {
     display: none;
 }
 
+.position-wrap,
 .team-wrap,
 .dept-wrap {
     width: 30%;
@@ -261,6 +267,7 @@ label[for='companyLogoFile']:hover {
     gap: 10px;
 }
 
+#position-title,
 #dept-title,
 #team-title {
     display: flex;
@@ -270,15 +277,17 @@ label[for='companyLogoFile']:hover {
     font-size: 15px;
 }
 
+#position-title span,
 #dept-title span,
 #team-title span {
     display: flex;
     align-items: flex-end;
     gap: 5px;
     font-size: 20px;
-    color: var(--bo-80);
+    color: var(--main-color-dark);
 }
 
+.position-list,
 .team-list,
 .dept-list {
     padding: 10px;
@@ -288,6 +297,8 @@ label[for='companyLogoFile']:hover {
     gap: 5px;
     border: 1px solid var(--bo-20);
 }
+
+.position-item,
 .dept-item,
 .team-item {
     width: 100%;
@@ -296,6 +307,7 @@ label[for='companyLogoFile']:hover {
     gap: 10px;
 }
 
+.position-item > div,
 .dept-item > label,
 .team-item > div {
     width: 80%;
@@ -306,6 +318,8 @@ label[for='companyLogoFile']:hover {
     font-size: 13px;
     gap: 3px;
 }
+
+.position-item > div span,
 .dept-item > label span,
 .team-item > div span {
     font-size: 20px;
@@ -316,6 +330,7 @@ label[for='companyLogoFile']:hover {
     display: none;
 }
 
+.position-item .remove-btn,
 .dept-item .remove-btn,
 .team-item .remove-btn {
     text-align: center;
@@ -326,6 +341,7 @@ label[for='companyLogoFile']:hover {
     border: 1px solid transparent;
 }
 
+.position-item .remove-btn:hover,
 .dept-item .remove-btn:hover,
 .team-item .remove-btn:hover {
     color: #e85c5c;
@@ -341,11 +357,13 @@ label[for='companyLogoFile']:hover {
     color: #fff;
 }
 
+.positionNo,
 .teamNo,
 .deptNo {
     display: none;
 }
 
+.position-insert,
 .dept-insert,
 .team-insert {
     width: 100%;
@@ -353,6 +371,7 @@ label[for='companyLogoFile']:hover {
     gap: 10px;
 }
 
+.position-insert input[type='text'],
 .dept-insert input[type='text'],
 .team-insert input[type='text'] {
     width: 75%;
@@ -360,6 +379,7 @@ label[for='companyLogoFile']:hover {
     outline-color: var(--main-color-dark);
 }
 
+.position-insert input[type='button'],
 .dept-insert input[type='button'],
 .team-insert input[type='button'] {
     width: 25%;
@@ -369,6 +389,7 @@ label[for='companyLogoFile']:hover {
     cursor: pointer;
 }
 
+.position-insert input[type='button']:hover,
 .dept-insert input[type='button']:hover,
 .team-insert input[type='button']:hover {
     background-color: #17a897;
