메인화면 수정, 알림기능 구현완료

--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -384,7 +384,8 @@ a{
 }
 
 .popup-section{
-    position: absolute;
+    position: fixed;
+    top: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
