디테일중중중

--- a/sixman/src/main/webapp/resources/css/project/allprj.css
+++ b/sixman/src/main/webapp/resources/css/project/allprj.css
@@ -155,3 +155,13 @@
     border: none;
     cursor: pointer;
 }
+
+.done {
+    background-color: #aaa;
+    color: black;
+    width: 90px;
+    height: 25px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
