로그인 멤버 프로필사진, 회사 로고 메인페이지 작업 회사설정페이지 테이블, 기본인설트구문 업데이트 로직변경 카카오지도 이미 등록된 주소로 지도위치 가져오기 실패

--- a/sixman/src/main/webapp/resources/css/admin/company/edit.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/edit.css
@@ -194,7 +194,6 @@ input[type='submit'] {
 }
 #preview {
     position: absolute;
-    display: none;
     top: 2px;
     left: 30px;
     width: 130px;
@@ -213,7 +212,7 @@ input[type='submit'] {
 #company-name-edit input {
     width: 50%;
 }
-label[for='companyLogoFile'] {
+label[for='companyLogo'] {
     position: absolute;
     top: 0px;
     right: 0px;
@@ -230,11 +229,11 @@ label[for='companyLogoFile'] {
     font-size: 13px;
 }
 
-label[for='companyLogoFile'] span {
+label[for='companyLogo'] span {
     font-size: 15px;
 }
 
-label[for='companyLogoFile']:hover {
+label[for='companyLogo']:hover {
     border: 1px solid var(--main-color);
     color: #000;
     font-weight: 500;
