--- a/sixman/src/main/webapp/resources/css/admin/company/edit.css
+++ b/sixman/src/main/webapp/resources/css/admin/company/edit.css
@@ -329,9 +329,9 @@ label[for='companyLogo']:hover {
     display: none;
 }
 
-.position-item .remove-btn,
-.dept-item .remove-btn,
-.team-item .remove-btn {
+.position-item .remove-position,
+.dept-item .remove-dept,
+.team-item .remove-team {
     text-align: center;
     width: 20%;
     color: var(--bo-40);
@@ -340,9 +340,9 @@ label[for='companyLogo']:hover {
     border: 1px solid transparent;
 }
 
-.position-item .remove-btn:hover,
-.dept-item .remove-btn:hover,
-.team-item .remove-btn:hover {
+.position-item .remove-position:hover,
+.dept-item .remove-dept:hover,
+.team-item .remove-team:hover {
     color: #e85c5c;
 }
 
@@ -392,4 +392,8 @@ label[for='companyLogo']:hover {
 .dept-insert input[type='button']:hover,
 .team-insert input[type='button']:hover {
     background-color: #17a897;
+}
+
+#deptNo {
+    display: none;
 }
