--- a/sixman/src/main/webapp/resources/css/addressBook/test.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/test.css
@@ -83,13 +83,16 @@
 }
 
 .body {
-    margin-top: 10px;
-    width: 100%;
+    margin: auto;
+    margin-top: 30px;
+    width: 90%;
     height: 80%;
     display: grid;
+    justify-content: center;
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 30px;
+    gap: 20px;
 }
 .body-controller {
     width: 100%;
@@ -255,13 +258,15 @@
 .card-item {
     position: relative;
     width: 100%;
-    height: 100%;
     box-shadow: 1px 1px 3px 1px var(--bo-20);
     border: 2px solid #fff;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.card-item:hover {
 }
 
 .card-item:has(input[type='checkbox']:checked) {
@@ -277,7 +282,6 @@
     margin-bottom: 10px;
 }
 
-.card-owner,
 .card-item p {
     display: flex;
     align-items: center;
@@ -286,7 +290,6 @@
     color: var(--bo-80);
 }
 
-.card-owner span,
 .card-item p span {
     margin-right: 5px;
     color: var(--bo-80);
@@ -316,15 +319,29 @@
 }
 
 .card-bottom {
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 8px;
-    gap: 3px;
+    padding: 10px 15px 15px 15px;
+    gap: 5px;
 }
 
+#card-email {
+    color: #000;
+}
+
+#card-email:hover {
+    color: #17a897;
+}
+
+#card-email strong,
+.card-item p strong,
 #card-address {
-    font-size: 10px;
+    font-size: 14px;
+    font-weight: 900;
+    color: var(--main-color-dark);
+    margin-right: 3px;
 }
 
 #card-position {
@@ -332,6 +349,9 @@
 }
 
 #card-detail {
+    /* position: absolute;
+    bottom: 8px;
+    right: 8px; */
     width: 70px;
     text-align: center;
     font-size: 12px;
@@ -351,4 +371,114 @@
 #card-company {
     font-size: 14px;
     font-weight: 600;
+}
+
+#card-company span {
+    font-size: 20px;
+}
+
+#card-name {
+    font-size: 18px;
+    font-weight: 900;
+    color: var(--main-color-dark);
+}
+
+/* 부서목록 */
+.teamList-item,
+.deptList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    transition: 0.2s ease-in-out;
+}
+
+.teamList-item label > input,
+.deptList-item label > input {
+    display: none;
+}
+
+.teamList-item .toggleBtn,
+.deptList-item .toggleBtn {
+    padding: 3px 4px;
+    display: flex;
+    background-color: var(--main-color);
+    align-items: center;
+    color: #fff;
+    margin-right: 5px;
+    transition: 0.2s ease-in-out;
+}
+
+.teamList-item .toggleBtn > span,
+.deptList-item .toggleBtn > span {
+    font-size: 15px;
+    transition: 0.4s ease-in-out;
+}
+
+.teamList-item > label,
+.deptList-item > label {
+    width: 100%;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.teamList-item {
+    margin-left: 23px;
+}
+
+.teamList-item ~ li > .memberList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    margin-left: 46px;
+}
+
+.deptList-item ~ li > .memberList-item {
+    width: 70%;
+    border: 1px solid var(--main-color);
+    border-radius: 2px;
+    margin: 4px 0;
+    margin-left: 23px;
+}
+
+.memberList-item > a {
+    font-size: 12px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+}
+.memberList-item > a > span {
+    margin-right: 4px;
+    color: var(--main-color);
+}
+
+.teamList-item:has(input:checked),
+.deptList-item:has(input:checked) {
+    border: 1px solid var(--main-color-dark);
+    background-color: var(--main-color-dark);
+    color: #fff;
+}
+
+.teamList-item:has(input:checked) .toggleBtn,
+.deptList-item:has(input:checked) .toggleBtn {
+    background-color: var(--main-color-dark);
+}
+.teamList-item:has(input:checked) .toggleBtn span,
+.deptList-item:has(input:checked) .toggleBtn span {
+    transform: rotate(180deg);
+}
+
+.teamList-item ~ li,
+.deptList-item ~ li {
+    max-height: 0px;
+    overflow: hidden;
+}
+
+.teamList-item:has(input:checked) ~ li,
+.deptList-item:has(input:checked) ~ li {
+    max-height: none;
 }
